--- a/css/style.css
+++ b/css/style.css
@@ -649,6 +649,7 @@ li:hover a.menu__link::before {
         position: relative;
         /* top: -200%; */
         left: 45%;
+        z-index: 9999;
         transform: translateY(-100px);
     }
 }
